--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -2,7 +2,7 @@
 
 /* Rings */
 $water-ring: #5f919b;
-$earth-ring: #a8a878;
+$earth-ring: #699678;
 $fire-ring: #9b7350;
 $air-ring: #917896;
 $void-ring: #4b4641;
