--- a/templates/actors/characters/character-sheet.hbs
+++ b/templates/actors/characters/character-sheet.hbs
@@ -6,22 +6,49 @@
    <!-- make a separator -->
    <div class="separator"></div>
 
-   <div class="central-col">
-      <div class="rings">
-         <div class="flex flex-col"><ul>
-               <li class="flex flex-row"><div class="border"><p class="text-blue">Eau</p><img
+   <div class="mb-4 flex flex-col justify-center ">
+      
+         <div class="flex flex-col text-xl bold justify-center align-center"><ul class="p-0">
+               <li class="flex flex-row w-full justify-center align-center">
+                  <div class="relative "><img
+                        src="/systems/l5r4ec/assets/icons/rings/earth.svg"
+                        alt="le symbole de l'anneau de la terre"
+                        height="128"
+                        width="128" class="no-borders"
+                     /><p class="text-earth top-64 absolute right-150">{{localize "l5r4ec.rings.earth"}}</p></div>
+                     <div class="relative "><img
+                        src="/systems/l5r4ec/assets/icons/rings/air.svg"
+                        alt="le symbole de l'anneau de l'air"
+                        height="128"
+                        width="128" class="no-borders"
+                     /><p class="text-air absolute top-64 left-150">{{localize "l5r4ec.rings.air"}}</p></div>
+                     </li>
+               <li class="flex flex-row w-full mt-n20 justify-center align-center"><div class=" relative mr-30"><img
                         src="/systems/l5r4ec/assets/icons/rings/water.svg"
                         alt="le symbole de l'anneau de l'eau"
                         height="128"
-                        width="128"
-                     />
+                        width="128" class="no-borders"
+                     /><p class="text-water absolute top-64 right-150">{{localize "l5r4ec.rings.water"}}</p>
+                  </div>
+                  <div class=" relative ml-30"><img
+                        src="/systems/l5r4ec/assets/icons/rings/fire.svg"
+                        alt="le symbole de l'anneau du feu"
+                        height="128"
+                        width="128" class="no-borders"
+                     /><p class="text-fire absolute top-64 left-150">{{localize "l5r4ec.rings.fire"}}</p></div>
 
-                     
-                     </li>
-               <li class="flex flex-row"><div class="border">Terre</div><div>Air</div></li>
-               <li class="flex flex-row"><div class="border">Vide</div></li>
+               </li>
+               <li class="flex flex-col justify-center align-center mt-n45">
+               
+               <img
+                        src="/systems/l5r4ec/assets/icons/rings/void.svg"
+                        alt="le symbole de l'anneau du vide"
+                        height="128"
+                        width="128" class="no-borders"
+                     /><p class="text-void text-center m-0 ">{{localize "l5r4ec.rings.void"}}</p></div>
+               </li>
             </ul></div>
-      </div>
+      
    </div>
 
    <div>
