rings visual nearly done

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,97 @@
 /* text colors */
 /* Rings */
+.no-borders {
+  border: none;
+}
+
+.no-outline {
+  outline: none;
+}
+
+#ring-inputs-earth input {
+  border: 3px solid #699678 !important;
+  border-radius: 100% !important;
+  color: #699678 !important;
+  outline: none !important;
+  position: absolute !important;
+  background-color: white !important;
+  width: 38px !important;
+  height: 38px !important;
+  text-align: center !important;
+  font-size: larger !important;
+  z-index: 1 !important;
+  padding: auto !important;
+  right: 5px !important;
+  bottom: 5px !important;
+}
+
+#ring-inputs-water input {
+  border: 3px solid #5f919b !important;
+  border-radius: 100% !important;
+  background-color: white !important;
+  color: #5f919b !important;
+  outline: none !important;
+  position: absolute !important;
+  width: 38px !important;
+  height: 38px !important;
+  text-align: center !important;
+  font-size: larger !important;
+  z-index: 1 !important;
+  padding: auto !important;
+  top: 25px !important;
+  right: -5px !important;
+}
+
+#ring-inputs-fire input {
+  border: 3px solid #9b7350 !important;
+  border-radius: 100% !important;
+  background-color: white !important;
+  color: #9b7350 !important;
+  outline: none !important;
+  position: absolute !important;
+  width: 38px !important;
+  height: 38px !important;
+  text-align: center !important;
+  font-size: larger !important;
+  z-index: 1 !important;
+  padding: auto !important;
+  top: 25px !important;
+  left: -5px !important;
+}
+
+#ring-inputs-air input {
+  border: 3px solid #917896 !important;
+  border-radius: 100% !important;
+  background-color: white !important;
+  color: #917896 !important;
+  outline: none !important;
+  position: absolute !important;
+  width: 38px !important;
+  height: 38px !important;
+  text-align: center !important;
+  font-size: larger !important;
+  z-index: 1 !important;
+  padding: auto !important;
+  bottom: 5px !important;
+  left: 5px !important;
+}
+
+#ring-inputs-void input {
+  border: 3px solid #4b4641 !important;
+  border-radius: 100% !important;
+  background-color: white !important;
+  color: #4b4641 !important;
+  outline: none !important;
+  position: absolute !important;
+  width: 38px !important;
+  height: 38px !important;
+  text-align: center !important;
+  font-size: larger !important;
+  z-index: 1 !important;
+  top: -10px !important;
+  left: 45px !important;
+}
+
 /* flexbox */
 .flex {
   display: flex;
@@ -10869,10 +10961,6 @@
 
 .left-n-300 {
   left: -300px;
-}
-
-.no-borders {
-  border: none;
 }
 
 .separator {
