--- a/styles/basic/inputs.scss
+++ b/styles/basic/inputs.scss
@@ -80,3 +80,52 @@
    top: -10px !important;
    left: 45px !important;
 }
+
+#traits-inputs-earth input {
+   border: 3px solid $earth-ring !important;
+   border-radius: 100% !important;
+   background-color: white !important;
+   color: $earth-ring !important;
+   outline: none !important;
+
+   width: 38px !important;
+   height: 38px !important;
+   text-align: center !important;
+   font-size: larger !important;
+}
+#traits-inputs-water input {
+   border: 3px solid $water-ring !important;
+   border-radius: 100% !important;
+   background-color: white !important;
+   color: $water-ring !important;
+   outline: none !important;
+
+   width: 38px !important;
+   height: 38px !important;
+   text-align: center !important;
+   font-size: larger !important;
+}
+#traits-inputs-air input {
+   border: 3px solid $air-ring !important;
+   border-radius: 100% !important;
+   background-color: white !important;
+   color: $air-ring !important;
+   outline: none !important;
+
+   width: 38px !important;
+   height: 38px !important;
+   text-align: center !important;
+   font-size: larger !important;
+}
+#traits-inputs-fire input {
+   border: 3px solid $fire-ring !important;
+   border-radius: 100% !important;
+   background-color: white !important;
+   color: $fire-ring !important;
+   outline: none !important;
+
+   width: 38px !important;
+   height: 38px !important;
+   text-align: center !important;
+   font-size: larger !important;
+}
