--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "basic/margin.scss";
 @import "basic/padding.scss";
 @import "basic/positions.scss";
+@import "basic/size.scss";
 .separator {
    border-bottom: 1px solid #020000;
    margin-bottom: 20px;
