--- a/templates/actors/characters/character-sheet.hbs
+++ b/templates/actors/characters/character-sheet.hbs
@@ -6,7 +6,7 @@
    <!-- make a separator -->
    <div class="separator"></div>
 
-   <div class="mb-4 flex flex-row justify-between">
+   <div class="mb-100 flex flex-row justify-between">
       <div class="">
          <table>
             <tr>
@@ -49,7 +49,7 @@
 
          <table>
             <tr>
-               <th><h2>{{localize "l5r4ec.rings.water"}}</h2></th>
+               <th><h2 class="text-water">{{localize "l5r4ec.rings.water"}}</h2></th>
 
             </tr>
             <tr>
@@ -97,7 +97,14 @@
                      width="128"
                      class="no-borders"
                   />
-                  <p class="text-earth top-64 absolute right-150">{{localize "l5r4ec.rings.earth"}}</p>
+                  <p class="text-earth top-50 absolute right-150 w-64px text-center">{{localize "l5r4ec.rings.earth"}}</p>
+                  <img
+                     src="/systems/l5r4ec/assets/icons/rings/kanji_earth.svg"
+                     alt=""
+                     class="text-earth absolute right-150 no-borders"
+                     height="64"
+                     width="64"
+                  />
                   <div id="ring-inputs-earth"><input
                         type="number"
                         name="data.rings.earth"
@@ -112,7 +119,14 @@
                      height="128"
                      width="128"
                      class="no-borders"
-                  /><p class="text-air absolute top-64 left-150">{{localize "l5r4ec.rings.air"}}</p>
+                  /><p class="text-air absolute top-50 left-150 w-64px text-center">{{localize "l5r4ec.rings.air"}}</p>
+                  <img
+                     src="/systems/l5r4ec/assets/icons/rings/kanji_air.svg"
+                     alt=""
+                     class="text-earth absolute left-150 no-borders"
+                     height="64"
+                     width="64"
+                  />
                   <div id="ring-inputs-air"><input
                         type="number"
                         name="data.rings.air"
@@ -129,7 +143,14 @@
                      height="128"
                      width="128"
                      class="no-borders"
-                  /><p class="text-water absolute top-64 right-150">{{localize "l5r4ec.rings.water"}}</p>
+                  /><p class="text-water absolute top-140 w-64px text-center right-130">{{localize "l5r4ec.rings.water"}}</p>
+                  <img
+                     src="/systems/l5r4ec/assets/icons/rings/kanji_water.svg"
+                     alt=""
+                     class="text-earth absolute right-130 top-90 no-borders"
+                     height="64"
+                     width="64"
+                  />
                   <div id="ring-inputs-water">
                      <input
                         type="number"
@@ -147,7 +168,14 @@
                      height="128"
                      width="128"
                      class="no-borders"
-                  /><p class="text-fire absolute top-64 left-150">{{localize "l5r4ec.rings.fire"}}</p>
+                  /><p class="text-fire absolute top-140 w-64px text-center left-130">{{localize "l5r4ec.rings.fire"}}</p>
+                  <img
+                     src="/systems/l5r4ec/assets/icons/rings/kanji_fire.svg"
+                     alt=""
+                     class="text-earth absolute left-130 top-90 no-borders"
+                     height="64"
+                     width="64"
+                  />
                   <div id="ring-inputs-fire"><input
                         type="number"
                         name="data.rings.fire"
@@ -168,7 +196,14 @@
                      width="128"
                      class="no-borders"
                   />
-                  <p class="text-void text-center m-0">{{localize "l5r4ec.rings.void"}}</p>
+                  <p class="text-void text-center absolute left-24 top-190 w-80px">{{localize "l5r4ec.rings.void"}}</p>
+                  <img
+                     src="/systems/l5r4ec/assets/icons/rings/kanji_void.svg"
+                     alt=""
+                     class="text-earth absolute left-24 top-125 no-borders"
+                     height="80"
+                     width="80"
+                  />
                   <div id="ring-inputs-void">
                      <input
                         type="number"
